--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,29 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+{% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+{% endblock %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
+{% block javascripts %}
+{% block importmap %}{{ importmap('app') }}{% endblock %}
+{% endblock %}
+
     </head>
-    <body>
+    <body class="bg-gray-100 text-gray-900 flex flex-col justify-center items-center min-h-screen">
+        <nav class="bg-gray-800 p-4 rounded-lg shadow-lg">           
+                <div class="container mx-auto flex justify-between items-center space-x-4">
+                    <a class="text-gray-300 hover:text-white" href="{{ path('app_home') }}">Home</a>
+                    <a class="text-gray-300 hover:text-white" href="{{ path('app_search') }}">Search</a>
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <a class="text-gray-300 hover:text-white" href="{{ path('app_profile') }}">Profile</a>
+                        <a class="text-gray-300 hover:text-white" href="{{ path('app_logout') }}">Logout</a>
+                    {% else %}
+                        <a class="text-gray-300 hover:text-white" href="{{ path('app_registration') }}">Register</a>
+                        <a class="text-gray-300 hover:text-white" href="{{ path('app_login') }}">Login</a>
+                    {% endif %}
+                </div>
+            </div>
+        </nav>
+
         {% block body %}{% endblock %}
     </body>
 </html>
