--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -1,51 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Game Index{% endblock %}
-
 {% block body %}
-<div class="container mx-auto p-6">
-    <h1 class="text-3xl font-bold mb-6">Game Index</h1>
-
-    <div class="mb-4">
-        <a href="{{ path('app_game_new') }}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">
-            Create New
-        </a>
+    <div class="flex justify-center items-center min-h-screen bg-gray-100">
+        <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-3xl">
+            <h1 class="text-2xl font-bold mb-4">Games</h1>
+            <ul class="space-y-4 mb-4">
+                {% for game in games %}
+                    <li class="p-4 border rounded-md shadow-sm bg-gray-50">
+                        <span class="font-bold">{{ game.title }}</span> - {{ game.genre }} - {{ game.platform }}
+                    </li>
+                {% endfor %}
+            </ul>
+            <a href="{{ path('app_game_new') }}" class="bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                Add New Game
+            </a>
+        </div>
     </div>
-
-    <div class="overflow-x-auto">
-        <table class="min-w-full bg-white border border-gray-200">
-            <thead>
-                <tr class="bg-gray-100">
-                    <th class="py-2 px-4 border-b">Id</th>
-                    <th class="py-2 px-4 border-b">Title</th>
-                    <th class="py-2 px-4 border-b">Genre</th>
-                    <th class="py-2 px-4 border-b">Developer</th>
-                    <th class="py-2 px-4 border-b">Release Date</th>
-                    <th class="py-2 px-4 border-b">Platform</th>
-                    <th class="py-2 px-4 border-b">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for game in games %}
-                <tr class="hover:bg-gray-50">
-                    <td class="py-2 px-4 border-b">{{ game.id }}</td>
-                    <td class="py-2 px-4 border-b">{{ game.title }}</td>
-                    <td class="py-2 px-4 border-b">{{ game.genre }}</td>
-                    <td class="py-2 px-4 border-b">{{ game.developer }}</td>
-                    <td class="py-2 px-4 border-b">{{ game.releaseDate ? game.releaseDate|date('Y-m-d') : '' }}</td>
-                    <td class="py-2 px-4 border-b">{{ game.platform }}</td>
-                    <td class="py-2 px-4 border-b">
-                        <a href="{{ path('app_game_show', {'id': game.id}) }}" class="text-blue-500 hover:underline">Show</a>
-                        <a href="{{ path('app_game_edit', {'id': game.id}) }}" class="ml-2 text-yellow-500 hover:underline">Edit</a>
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="7" class="py-2 px-4 border-b text-center">No records found</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>
 {% endblock %}
