--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,25 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des collections{% endblock %}
-
 {% block body %}
-<div class="container mx-auto p-6">
-    <h1 class="text-3xl font-bold mb-6">Liste des collections</h1>
-
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-        {% for collectionGame in collectionGames %}
-        <div class="bg-white shadow-md rounded-lg overflow-hidden">
-           
-            <div class="p-4">
-                <h2 class="text-xl font-bold">Name{{ collectionGame.name }}</h2>
-                <p class="text-gray-600">Description{{ collectionGame.personalNote }}</p>
-                <a href="{{ path('app_collection_show', { 'id': collectionGame.id }) }}" class="mt-4 inline-block text-blue-500 hover:text-blue-700">Voir la collection</a>
-            </div>
-        </div>
-        {% else %}
-        <p class="text-gray-600">Aucune collection disponible.</p>
+    <h1>Collections</h1>
+    <ul>
+        {% for collection in collections %}
+            <li>{{ collection.game.title }} - {{ collection.personal_note }}</li>
         {% endfor %}
-    </div>
-</div>
+    </ul>
+    <a href="{{ path('app_collection_new') }}">Add New Collection</a>
 {% endblock %}
-
