--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,11 +1,27 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Collections</h1>
-    <ul>
-        {% for collection in collections %}
-            <li>{{ collection.game.title }} - {{ collection.personal_note }}</li>
-        {% endfor %}
-    </ul>
-    <a href="{{ path('app_collection_new') }}">Add New Collection</a>
+<div class="min-h-screen bg-gray-100 py-6 flex flex-col justify-center sm:py-12">
+    <div class="relative py-3 sm:max-w-xl sm:mx-auto">
+        <div class="relative px-4 py-10 bg-white mx-8 md:mx-0 shadow rounded-3xl sm:p-10">
+            <div class="max-w-md mx-auto">
+                <h1 class="text-2xl font-semibold text-center text-gray-800 mb-4">Collections</h1>
+                <ul class="list-disc space-y-2 pl-5">
+                    {% for collection in collections %}
+                    <li class="text-gray-600">
+                        <span class="font-semibold">{{ collection.game.title }}</span> - {{ collection.personal_note }}
+                    </li>
+                    {% else %}
+                    <li class="text-gray-600">Pas de collection trouvé</li>
+                    {% endfor %}
+                </ul>
+                <div class="mt-6">
+                    <a href="{{ path('app_collection_new') }}" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline block text-center">
+                        Ajouter une nouvelle collection
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
