--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -1,11 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Register</h1>
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword.first) }}
-        {{ form_row(registrationForm.plainPassword.second) }}
-        <button type="submit">Register</button>
-    {{ form_end(registrationForm) }}
+<div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
+    <div class="max-w-md w-full space-y-8">
+        <div>
+            <h1 class="text-center text-3xl font-extrabold text-gray-900">Inscription</h1>
+        </div>
+        {{ form_start(registrationForm, {'attr': {'class': 'mt-8 space-y-6'}}) }}
+            <div class="rounded-md shadow-sm -space-y-px">
+                <div class="mb-4">
+                    {{ form_row(registrationForm.username, {
+                        'label_attr': {'class': 'block text-sm font-medium text-gray-700'},
+                        'attr': {'class': 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm'}
+                    }) }}
+                </div>
+                <div class="mb-4">
+                    {{ form_row(registrationForm.plainPassword.first, {
+                        'label_attr': {'class': 'block text-sm font-medium text-gray-700'},
+                        'attr': {'class': 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm'}
+                    }) }}
+                </div>
+                <div class="mb-4">
+                    {{ form_row(registrationForm.plainPassword.second, {
+                        'label_attr': {'class': 'block text-sm font-medium text-gray-700'},
+                        'attr': {'class': 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm'}
+                    }) }}
+                </div>
+            </div>
+            <div>
+                <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    S'inscrire
+                </button>
+            </div>
+        {{ form_end(registrationForm) }}
+    </div>
+</div>
 {% endblock %}
