--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,7 +17,7 @@
                 </ul>
                 <div class="mt-6">
                     <a href="{{ path('app_collection_new') }}" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline block text-center">
-                        Ajouter une nouvelle collection
+                        Ajouter une nouvelle Collection
                     </a>
                 </div>
             </div>
