--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,6 +8,9 @@
                 {% if error %}
                     <div class="text-red-500">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
+                <input type="hidden" name="_csrf_token"
+                       value="{{ csrf_token('authenticate') }}"
+                >
                 <div>
                     <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
                     <input type="text" id="username" name="_username" value="{{ last_username }}" required autofocus
